# rupair

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  config.toml  rust-toolchain.toml
.cargo/: config.toml
examples/: buffer_overflow_example.rs  buffer_overflow_example_fixed.rs  buffer_overflow_fixed.rs  buffer_overflow_report.md  buffer_overflow_test.rs  buffer_overflow_test_fixed.rs  buggy.rs  check_safe_code.rs  complex_overflow.rs  complex_overflow_fixed.rs  run_analyzer.rs  safe_buffer.rs  test.rs  test_mir.rs
mir_dump/: buffer_overflow_test.main.-------.nll.0.mir  buffer_overflow_test.main.-------.renumber.0.mir  buffer_overflow_test.main.1-1-000.built.after.mir  buffer_overflow_test.main.1-1-007.SimplifyCfg-initial.after.mir  buffer_overflow_test.main.1-1-007.SimplifyCfg-initial.before.mir  buffer_overflow_test.main.1-1-009.PromoteTemps.after.mir  buffer_overflow_test.main.1-1-009.PromoteTemps.before.mir  buffer_overflow_test.main.1-1-010.SimplifyCfg-promote-consts.after.mir  buffer_overflow_test.main.1-1-010.SimplifyCfg-promote-consts.before.mir  buffer_overflow_test.main.2-1-000.analysis.after.mir  buffer_overflow_test.main.2-1-001.ImpossiblePredicates.after.mir  buffer_overflow_test.main.2-1-001.ImpossiblePredicates.before.mir  buffer_overflow_test.main.2-1-002.CleanupPostBorrowck.after.mir  buffer_overflow_test.main.2-1-002.CleanupPostBorrowck.before.mir  buffer_overflow_test.main.2-1-003.RemoveNoopLandingPads.after.mir  buffer_overflow_test.main.2-1-003.RemoveNoopLandingPads.before.mir  buffer_overflow_test.main.2-1-004.SimplifyCfg-post-analysis.after.mir  (+569 more)
(+13 files in other folders)
