[package]
name = "rupair"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
walkdir = "2"
anyhow = "1"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
z3 = "0.12"

[build-dependencies]
pkg-config = "0.3"