cargo-features = ["profile-rustflags"]
[package]
name = "rupair"
version = "0.1.0"
edition = "2024"

[features]
default = []
with-rustc = []

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
walkdir = "2.4"
z3 = "0.12"
z3-sys = "0.8"
regex = "1.5"
nom = "7.1.3"
regex-automata = "0.4.3"
rand = "0.8"
tempfile = "3.10"

[build-dependencies]
pkg-config = "0.3"

[package.metadata.rust-analyzer]
rustc_private = true

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[profile.dev.package.rupair]
rustflags = [
    "-L", "D:/OneDrive/桌面/rust/build/x86_64-pc-windows-msvc/stage0-rustc/x86_64-pc-windows-msvc/release/deps"
]